Ensure that the form looks nice on mobile-sized screens.

--- a/css/layout.css
+++ b/css/layout.css
@@ -18,24 +18,6 @@
   width: 100%;
 }
 
-.journal-image {
-  margin: 0 auto;
-  width: 87.5%;
-  height: 35vh;
-  border-radius: 0.25rem;
-}
-
-.user-input {
-  width: 90%;
-  margin: 0.5rem auto;
-  border: 1px solid grey;
-  border-radius: 0.25rem;
-}
-
-#notes {
-  height: 20vh;
-}
-
 @media screen and (min-width: 768px) {
   .container {
     max-width: 900px;
